Developer/src/objects/EnglishWork__c.object
<CustomObject>
    <fields>
        <fullName>English_Japanese__c</fullName>
        <label>English⇒Japanese</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Japanese_English__c</fullName>
        <label>Japanese⇒English</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Original_English__c</fullName>
        <label>Original(English)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Original_Japanese__c</fullName>
        <label>Original(Japanese)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ユーザ</label>
        <referenceTo>User</referenceTo>
        <relationshipName>EnglishWork</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>aaaaaa__c</fullName>
        <label>aaaaaa</label>
        <length>100</length>
        <maskChar>asterisk</maskChar>
        <maskType>creditCard</maskType>
        <type>EncryptedText</type>
    </fields>
    <label>EnglishWork</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <label>EnglishWork名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>Read</sharingModel>
</CustomObject>